# jeeves-yeti-pyproject

./: .gitignore  AGENTS.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: test.yml
docs/decisions/: flake8-pyproject-toml-config.md
jeeves_yeti_pyproject/: __init__.py  diff.py  errors.py  files_and_directories.py  flags.py  jeeves.py  mypy.py  notifications.py
jeeves_yeti_pyproject/flakeheaven/: __init__.py  flakeheaven.toml  integration.py
tests/: test_diff.py  test_flags.py  test_flakeheaven.py
